# hisi-fwpkg

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
crates/hisi-fwpkg/: Cargo.toml
crates/hisi-fwpkg-cli/: Cargo.toml
crates/hisi-fwpkg-cli/src/: main.rs
crates/hisi-fwpkg/src/: elf.rs  error.rs  fwpkg.rs  image.rs  lib.rs  patch.rs  plan.rs
crates/hisi-fwpkg/tests/: vendor_parity.rs
examples/: blinky.fwpkg
